--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "98k": "^0.4.2",
+    "98k": "^0.4.3",
+    "98k-loading": "^0.1.0",
     "axios": "^0.17.1",
     "body-parser": "^1.18.2",
     "compression": "^1.7.1",
@@ -21,7 +22,6 @@
     "express": "^4.16.2",
     "lodash": "^4.17.4",
     "mysql2": "^1.5.2",
-    "react": "^16.3.0",
     "sequelize": "^4.33.4",
     "styled-components": "^3.1.6"
   },
